refactor: migrar de arquitectura en tres capas a arquitectura hexagonal
