# spring-boot-exercise-infrastructure/src/main/java/es/jclorenzo/exercises/springboot/infrastructure/adapter/currency/dto/RemoteCurrency.java
@@ -1,0 +1,13 @@
+package es.jclorenzo.exercises.springboot.infrastructure.adapter.currency.dto;
+
+/**
+ * Currency.
+ *
+ * @param symbol   the symbol
+ * @param code     the code
+ * @param decimals the decimals
+ */
+
+public record RemoteCurrency(String symbol, String code, Integer decimals) {
+
+}
